--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.generate-ddl=true
 spring.datasource.hikari.auto-commit=false
 
 server.port = 8090
+
+app.token=463408a1-54c9-4307-bb1c-6cced559f5a7
