--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:postgresql://containers-us-west-70.railway.app:7728/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/testes
 spring.datasource.username=postgres
-spring.datasource.password=9dA9DAbzlkug9GEEX5RU
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
 
 feign.autoconfiguration.jackson.enabled=true
 server.port = 8091
