--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
+
 feign.autoconfiguration.jackson.enabled=true
 server.port = 8091
 
