--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/testes
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
