--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ feign.autoconfiguration.jackson.enabled=true
 server.port = 8091
 
 app.token=06315036-6214-43e8-a173-b766de200c24
+
+management.endpoints.web.exposure.include=*
+management.info.java.enabled=true
+management.info.env.enabled=true
