--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.main.lazy-initialization=true
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/testes
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -29,3 +32,4 @@ app.token=06315036-6214-43e8-a173-b766de200c24
 management.endpoints.web.exposure.include=*
 management.info.java.enabled=true
 management.info.env.enabled=true
+
