--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 
-#logging.level.root=INFO
-#logging.level.org.hibernate.stat=DEBUG
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.root=INFO
+logging.level.org.hibernate.stat=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.cache.type=redis
 spring.redis.host=localhost
