--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.generate-ddl=true
 logging.level.root=INFO
 logging.level.org.hibernate.stat=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
 
 spring.cache.type=redis
 spring.redis.host=localhost
