--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.main.lazy-initialization=true
 
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/testes
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -14,7 +13,7 @@ spring.jpa.generate-ddl=true
 logging.level.root=INFO
 logging.level.org.hibernate.stat=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.boot.autoconfigure=DEBUG
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
 
 spring.cache.type=redis
 spring.redis.host=localhost
