--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ management.endpoints.web.exposure.include=*
 management.info.java.enabled=true
 management.info.env.enabled=true
 
+spring.jmx.enabled=false
+
+
