--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/testes
 spring.datasource.username=postgres
