--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ logging.level.root=INFO
 logging.level.org.hibernate.stat=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.boot.autoconfigure=DEBUG
+spring.jpa.properties.hibernate.show_sql=false
 
 spring.cache.type=redis
 spring.redis.host=localhost
