--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.main.lazy-initialization=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testes
+spring.datasource.url=jdbc:postgresql://localhost:5432/spywareApi
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 #spring.jpa.properties.hibernate.generate_statistics=true
