--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.redis.port=6379
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 feign.autoconfiguration.jackson.enabled=true
 server.port = 8091
